--- a/style.css
+++ b/style.css
@@ -13,14 +13,16 @@
     margin: 20px;
     width: auto;
     height: 200px;
-
+    display: flex;
+    align-items: center;
+    justify-content:center;
 }
 .small { background: linear-gradient(#3e84ff,#ff05bd) ;
     width: 200px;
     height: 250px;
     display: flex;
     justify-content:center;
-
+    align-items: center;
 }
 .big{display: flex;
     justify-content: space-between;
@@ -32,5 +34,7 @@
     margin: 20px;
     width: auto;
     height: 500px;
-
+    display: flex;
+    justify-content:center;
+    align-items: center;
 }
